[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rl_x"
version = "0.0.1"
description = "RL-X: A framework for Reinforcement Learning research"
authors = [{name = "Nico Bohlinger", email = "nico.bohlinger@gmail.com"}]
license = {text = "MIT License"}
readme = "README.md"
dependencies = [
    "absl-py>=2.1.0",
    "ml-collections>=0.1.1",
    "wandb>=0.18.3",
    "gymnasium[mujoco,classic-control,atari,accept-rom-license,other]<=0.29.1",
    "mujoco>=3.2.3",
    "mujoco-mjx>=3.2.3",
    "numpy<=1.24.3",
    "tensorflow<=2.15.1",
    "tensorboard<=2.15.2",
    "jax[cpu]>=0.4.34",
    "flax>=0.9.0",
    "orbax_checkpoint>=0.6.4",
    "optax>=0.2.3",
    "chex>=0.1.87",
    "tensorflow_probability>=0.24.0"
]

[project.optional-dependencies]
envpool = [
    "envpool>=0.8.4"
]
all = [
    "rl_x[envpool]"
]

[project.urls]
repository = "https://github.com/nico-bohlinger/rl-x"

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
include = ["rl_x"]
