[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rl_x"
version = "0.0.1"
description = "RL-X: A framework for Reinforcement Learning research"
authors = [{name = "Nico Bohlinger", email = "nico.bohlinger@gmail.com"}]
license = {text = "MIT License"}
readme = "README.md"
dependencies = [
    "absl-py>=2.1.0",
    "ml-collections>=1.0.0",
    "wandb>=0.19.1",
    "gymnasium[mujoco,classic-control,atari,accept-rom-license,other]<=0.29.1",
    "mujoco<=3.2.4",
    "mujoco-mjx<=3.2.4",
    "numpy>=2.0.2",
    "tensorflow>=2.18.0",
    "tensorboard>=2.18.0",
    "jax[cpu]>=0.4.38",
    "flax>=0.10.2",
    "orbax_checkpoint>=0.11.0",
    "optax>=0.2.4",
    "chex>=0.1.88",
    "tensorflow_probability>=0.25.0"
]

[project.optional-dependencies]
envpool = [
    "envpool>=0.8.4"
]
all = [
    "rl_x[envpool]"
]

[project.urls]
repository = "https://github.com/nico-bohlinger/rl-x"

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
include = ["rl_x"]
